5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1637_1053.log
== TEST (2019-04-06 14:01:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

animal = input(" Digite a especie do animal: ")

if ("cervo"):
   mensagem = " cervo eh patrono de harry potter"
	
else:
	mensagem = "<animal> nao eh patrono de harry potter"
	
print(mensagem)	
-- OUTPUT:
cervo eh patrono de harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 14:02:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

animal = input(" Digite a especie do animal: ")

if (animal == cervo):
   mensagem = " cervo eh patrono de harry potter"
	
else:
	mensagem = "<animal> nao eh patrono de harry potter"
	
print(mensagem)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (animal == cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 14:03:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

animal = input(" Digite a especie do animal: ")

if (animal == "cervo"):
   mensagem = " cervo eh patrono de harry potter"
	
else:
	mensagem = "<animal> nao eh patrono de harry potter"
	
print(mensagem)	
-- OUTPUT:
cervo eh patrono de harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 14:04:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

animal = input(" Digite a especie do animal: ")

if (animal == "cervo"):
   mensagem = " cervo eh patrono de harry potter"
	
else:
	mensagem = "<entrada> nao eh patrono de harry potter"
	
print(mensagem)	
-- OUTPUT:
cervo eh patrono de harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 14:04:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

animal = input(" Digite a especie do animal: ")

if (animal == "cervo"):
   mensagem = " cervo eh patrono de harry potter"
	
else:
	mensagem = "animal nao eh patrono de harry potter"
	
print(mensagem)	
-- OUTPUT:
cervo eh patrono de harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:04:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

animal = input(" Digite a especie do animal: ")

if (animal == "cervo"):
   mensagem = " cervo eh patrono de harry potter"
	
else:
	mensagem = "animal nao eh patrono de harry potter"
	
print(mensagem)	
-- OUTPUT:
cervo eh patrono de harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:05:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

animal = input(" Digite a especie do animal: ")

if (animal == "cervo"):
   mensagem = " cervo eh patrono de harry potter"
	
else:
	mensagem = <animal> " nao eh patrono de harry potter"
	
print(mensagem)	
-- ERROR:
File "XXXX", line 11
    mensagem = <animal> " nao eh patrono de harry potter"
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:05:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

animal = input(" Digite a especie do animal: ")

if (animal == "cervo"):
   mensagem = " cervo eh patrono de harry potter"
	
else:
	mensagem =" <entrada> nao eh patrono de harry potter"
	
print(mensagem)	
-- OUTPUT:
cervo eh patrono de harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:06:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

animal = input(" Digite a especie do animal: ")

if (animal == "cervo"):
   mensagem = " cervo eh patrono de harry potter"
	
else:
	mensagem =" <asno> nao eh patrono de harry potter"
	
print(mensagem)	
-- OUTPUT:
cervo eh patrono de harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:06:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

animal = input(" Digite a especie do animal: ")

if (animal == "cervo"):
   mensagem = " cervo eh patrono de harry potter"
	
else:
	mensagem =" <asno> nao eh patrono de harry potter"
	
print(mensagem)	
-- OUTPUT:
cervo eh patrono de harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:13:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

animal = input(" Digite a especie do animal: ")

if (animal == "cervo"):
   mensagem = " cervo eh patrono de harry potter"
	
else:
	mensagem = animal + " nao eh patrono de harry potter"
	
print(mensagem)	
-- OUTPUT:
cervo eh patrono de harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:13:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

animal = input(" Digite a especie do animal: ")

if (animal == "cervo"):
   mensagem = " cervo eh patrono de harry potter"
	
else:
	mensagem = animal + " nao eh patrono de harry potter"
	
print(mensagem)	
-- EXECUTION TIME:
0.12951
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:13:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

animal = input(" Digite a especie do animal: ")

if (animal == "cervo"):
   mensagem = " cervo eh patrono de harry potter"
	
else:
	mensagem = animal + " nao eh patrono de harry potter"
	
print(mensagem)	
-- OUTPUT:
cervo eh patrono de harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:13:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

animal = input(" Digite a especie do animal: ")

if (animal == "cervo"):
   mensagem = " cervo eh patrono de harry potter"
	
else:
	mensagem = animal + " nao eh patrono de harry potter"
	
print(mensagem)	
-- OUTPUT:
cervo eh patrono de harry potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:14:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

animal = input(" Digite a especie do animal: ")

if (animal == "cervo"):
   mensagem = " cervo eh patrono de harry potter"
	
else:
	mensagem = animal + " nao eh patrono de harry potter"
	
print(mensagem)	
-- EXECUTION TIME:
0.158329
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de harry potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:15:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

animal = input(" Digite a especie do animal: ")

if (animal == "cervo"):
   mensagem = " cervo eh patrono de Harry Potter"
	
else:
	mensagem = animal + " nao eh patrono de Harry Potter"
	
print(mensagem)	
-- EXECUTION TIME:
0.152667
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:15:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

animal = input(" Digite a especie do animal: ")

if (animal == "cervo"):
   mensagem = " cervo eh patrono de Harry Potter"
	
else:
	mensagem = animal + " nao eh patrono de Harry Potter"
	
print(mensagem)	
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:16:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

animal = input(" Digite a especie do animal: ")

if (animal == "cervo"):
   mensagem = " cervo eh patrono de Harry Potter"
	
else:
	mensagem = animal + " nao eh patrono de Harry Potter"
	
print(mensagem)	
-- EXECUTION TIME:
0.121789
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:17:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

animal = input(" Digite a especie do animal: ")

if (animal == "cervo"):
   mensagem = " cervo eh patrono de Harry Potter"
	
else:
	mensagem = animal + " nao eh patrono de Harry Potter"
	
print(mensagem)	
-- EXECUTION TIME:
0.188192
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:19:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

animal = input(" Digite a especie do animal: ")

if (animal == "cervo"):
   mensagem = " cervo eh patrono de Harry Potter"
	
else:
	mensagem = animal + " nao eh patrono de Harry Potter"
	
print(mensagem)	
-- EXECUTION TIME:
0.127359
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:19:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

animal = input(" Digite a especie do animal: ")

if (animal == "cervo"):
   mensagem = " cervo eh patrono de Harry Potter"
else:
	mensagem = animal + " nao eh patrono de Harry Potter"
	
print(mensagem)	
-- EXECUTION TIME:
0.174991
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:19:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

animal = input(" Digite a especie do animal: ")

if (animal == "cervo"):
   mensagem = " cervo eh patrono de Harry Potter"
else:
	mensagem = animal + " nao eh patrono de Harry Potter"
	
print(mensagem)	
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:20:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

animal = input(" Digite a especie do animal: ")

if (animal == "cervo"):
   mensagem = " cervo eh patrono de Harry Potter"
else:
	mensagem = animal + " nao eh patrono de Harry Potter"
	
print(mensagem)	
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:20:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

animal = input(" Digite a especie do animal: ")

if (animal == "cervo"):
   mensagem = " cervo eh patrono de Harry Potter"
else:
	mensagem = animal + " nao eh patrono de Harry Potter"
	
print(mensagem)	
-- EXECUTION TIME:
0.185589
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:21:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

animal = input(" Digite a especie do animal: ")

if (animal == "cervo"):
   mensagem = " cervo eh patrono de Harry Potter "
else:
	mensagem = animal + " nao eh patrono de Harry Potter "
	
print(mensagem)	
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:21:16) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

animal = input(" Digite a especie do animal: ")

if (animal == "cervo"):
   mensagem = " cervo eh patrono de Harry Potter "
else:
	mensagem = animal + " nao eh patrono de Harry Potter "
	
print(mensagem)	
-- EXECUTION TIME:
0.189578
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:21:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input(" Digite a especie do animal: ")

if (patrono == "cervo"):
   mensagem = " cervo eh patrono de Harry Potter "
else:
	mensagem = patrono + " nao eh patrono de Harry Potter "
	
print(mensagem)	
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:21:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input(" Digite a especie do animal: ")

if (patrono == "cervo"):
   mensagem = " cervo eh patrono de Harry Potter "
else:
	mensagem = patrono + " nao eh patrono de Harry Potter "
	
print(mensagem)	
-- EXECUTION TIME:
0.171473
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:22:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input(" Digite a especie do animal: ")

if (patrono == "cervo"):
   mensagem = " cervo eh patrono de Harry Potter "
else:
	mensagem = patrono , " nao eh patrono de Harry Potter "
	
print(mensagem)	
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:22:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input(" Digite a especie do animal: ")

if (patrono == "cervo"):
   mensagem = " cervo eh patrono de Harry Potter "
else:
	mensagem = patrono , " nao eh patrono de Harry Potter "
	
print(mensagem)	
-- EXECUTION TIME:
0.122465
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
('bode', ' nao eh patrono de Harry Potter ')
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:23:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input(" Digite a especie do animal: ")

if (patrono == "cervo"):
   mensagem = " cervo eh patrono de Harry Potter "
else:
	mensagem = patrono , " nao eh patrono de Harry Potter "
	
print(mensagem)	
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:23:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input(" Digite a especie do animal: ")

if (patrono == "cervo"):
   mensagem = " cervo eh patrono de Harry Potter "
else:
	mensagem = patrono , " nao eh patrono de Harry Potter "
	
print(mensagem)	
-- EXECUTION TIME:
0.193491
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
('bode', ' nao eh patrono de Harry Potter ')
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:23:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input(" Digite a especie do animal: ")

if (patrono == "cervo"):
   mensagem = " cervo eh patrono de Harry Potter "
else:
	mensagem = patrono + " nao eh patrono de Harry Potter "
	
print(mensagem)	
-- EXECUTION TIME:
0.175988
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:23:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input(" Digite a especie do animal: ")

if (patrono == "cervo"):
   mensagem = " cervo eh patrono de Harry Potter "
else:
	mensagem = patrono + " nao eh patrono de Harry Potter "
	
print(mensagem)	
-- EXECUTION TIME:
0.118213
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:23:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input(" Digite a especie do animal: ")

if (patrono == "cervo"):
   mensagem = " cervo eh patrono de Harry Potter "
else:
	mensagem = patrono + " nao eh patrono de Harry Potter "
	
print(mensagem)	
-- EXECUTION TIME:
0.162428
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:24:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input(" Digite a especie do animal: ")

if (patrono == "cervo"):
   mensagem = " cervo eh patrono de Harry Potter "
else:
	mensagem = patrono + " nao eh patrono de Harry Potter "
	
print(mensagem)	
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:24:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input(" Digite a especie do animal: ")

if (patrono == "cervo"):
   mensagem = " cervo eh patrono de Harry Potter "
else:
	mensagem = patrono + " nao eh patrono de Harry Potter "
	
print(mensagem)	
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:24:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input(" Digite a especie do animal: ")

if (patrono == "cervo"):
   mensagem = " cervo eh patrono de Harry Potter "
else:
	mensagem = patrono + " nao eh patrono de Harry Potter "
	
print(mensagem)	
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:25:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Digite a especie do animal: ")

if (patrono == "cervo"):
   mensagem = "cervo eh patrono de Harry Potter "
else:
	mensagem = patrono + " nao eh patrono de Harry Potter "
	
print(mensagem)	
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:25:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Digite a especie do animal: ")

if (patrono == "cervo"):
   mensagem = "cervo eh patrono de Harry Potter "
else:
	mensagem = patrono + " nao eh patrono de Harry Potter "
	
print(mensagem)	
-- EXECUTION TIME:
0.16707
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:25:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Digite a especie do animal: ")

if (patrono == "cervo"):
   mensagem = "cervo eh patrono de Harry Potter"
else:
	mensagem = patrono + " nao eh patrono de Harry Potter"
	
print(mensagem)	
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:25:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Digite a especie do animal: ")

if (patrono == "cervo"):
   mensagem = "cervo eh patrono de Harry Potter"
else:
	mensagem = patrono + " nao eh patrono de Harry Potter"
	
print(mensagem)	
-- EXECUTION TIME:
0.165747
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:25:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Digite a especie do animal: ")

if (patrono == "cervo"):
   mensagem = "cervo eh patrono de Harry Potter"
else:
	mensagem = patrono + " nao eh patrono de Harry Potter"
	
print(mensagem)	
-- EXECUTION TIME:
0.129356
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:25:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Digite a especie do animal: ")

if (patrono == "cervo"):
   mensagem = "cervo eh patrono de Harry Potter"
else:
	mensagem = patrono + "nao eh patrono de Harry Potter"
	
print(mensagem)	
-- EXECUTION TIME:
0.123877
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bodenao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:25:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Digite a especie do animal: ")

if (patrono == "cervo"):
   mensagem = "cervo eh patrono de Harry Potter"
else:
	mensagem = patrono + " nao eh patrono de Harry Potter"
	
print(mensagem)	
-- EXECUTION TIME:
0.15502
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono de Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono de Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:25:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Digite a especie do animal: ")

if (patrono == "cervo"):
   mensagem = "cervo eh patrono de Harry Potter"
else:
	mensagem = patrono + " nao eh patrono de Harry Potter"
	
print(mensagem)	
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:25:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Digite a especie do animal: ")

if (patrono == "cervo"):
   mensagem = "cervo eh patrono de Harry Potter"
else:
	mensagem = patrono + " nao eh patrono de Harry Potter"
	
print(mensagem)	
-- OUTPUT:
cervo eh patrono de Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:26:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

patrono = input("Digite a especie do animal: ")

if (patrono == "cervo"):
   mensagem = "cervo eh patrono do Harry Potter"
else:
	mensagem = patrono + " nao eh patrono do Harry Potter"
	
print(mensagem)	
-- EXECUTION TIME:
0.13798
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
